# ecs

./: .gitignore  CMakeLists.txt  Makefile  configure.cmd  configure.mk  configure.sh
cmake/: FindGLM.cmake
src/: .geometry.hpp.swp  .math.cpp.swp  .math.hpp.swp  .render.hpp.swp  algorithm.hpp  collision.cpp  collision.hpp  component.hpp  datastructures.hpp  entity.cpp  entity.hpp  geometry.cpp  geometry.hpp  main.cpp  math.cpp  math.hpp  physics.hpp  platform.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  settings.hpp
